# okf-wiki-template

./: .gitignore  AGENTS.md  README.md  build.mjs  package-lock.json  package.json  topics.json
assets/: wiki.css
docs/superpowers/plans/: 2026-06-27-okf-wiki-template.md
docs/superpowers/specs/: 2026-06-27-okf-wiki-template-design.md
ingest/: pyproject.toml
ingest/fixtures/: final-review-462.ppt  headingless.txt
ingest/ingest/: __init__.py  cli.py  draft.py  normalize.py  rawstore.py  slug.py  yamlsafe.py
ingest/ingest/adapters/: __init__.py  base.py  docling.py  markitdown.py
ingest/tests/: test_draft.py  test_integration.py  test_normalize.py  test_rawstore.py  test_slug.py  test_yamlsafe.py
lib/: okf.mjs
scripts/: ingest.mjs
test/: build-check.test.mjs  okf.test.mjs
wiki/getting-started/: index.md  welcome.md  writing-concepts.md
